<?xml version="1.0" encoding="utf-8"?>
<!-- 滑块与开关由 SettingsActivity 按 spec 列表注入到下面各个空容器中 -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ink_white"
    android:padding="@dimen/gap_large">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout style="@style/InkCard">

            <TextView
                style="@style/InkSection"
                android:text="@string/section_page_turn" />

            <LinearLayout
                android:id="@+id/page_turn_switch_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <RadioGroup
                android:id="@+id/page_turn_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/mode_tap"
                    style="@style/InkRadio"
                    android:text="@string/mode_tap" />

                <RadioButton
                    android:id="@+id/mode_swipe_horizontal"
                    style="@style/InkRadio"
                    android:text="@string/mode_swipe_horizontal" />

                <RadioButton
                    android:id="@+id/mode_swipe_vertical"
                    style="@style/InkRadio"
                    android:text="@string/mode_swipe_vertical" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout style="@style/InkCard">

            <TextView
                style="@style/InkSection"
                android:text="@string/section_gesture" />

            <TextView
                style="@style/InkHint"
                android:text="@string/gesture_hint" />

            <LinearLayout
                android:id="@+id/gesture_slider_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

        </LinearLayout>

        <LinearLayout style="@style/InkCard">

            <TextView
                style="@style/InkSection"
                android:text="@string/section_appearance" />

            <TextView
                style="@style/InkHint"
                android:text="@string/appearance_hint" />

            <TextView
                style="@style/InkSection"
                android:text="@string/overlay_mode_title" />

            <TextView
                style="@style/InkHint"
                android:text="@string/overlay_mode_hint" />

            <RadioGroup
                android:id="@+id/overlay_mode_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/overlay_mode_auto"
                    style="@style/InkRadio"
                    android:text="@string/overlay_mode_auto" />

                <RadioButton
                    android:id="@+id/overlay_mode_accessibility"
                    style="@style/InkRadio"
                    android:text="@string/overlay_mode_accessibility" />

                <RadioButton
                    android:id="@+id/overlay_mode_application"
                    style="@style/InkRadio"
                    android:text="@string/overlay_mode_application" />

            </RadioGroup>

            <TextView
                style="@style/InkHint"
                android:text="@string/overlay_strict_hint" />

            <LinearLayout
                android:id="@+id/overlay_mode_switch_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <LinearLayout
                android:id="@+id/appearance_slider_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <Button
                android:id="@+id/center_float_ball"
                style="@style/InkButton"
                android:layout_marginBottom="@dimen/gap"
                android:text="@string/center_float_ball" />

            <LinearLayout
                android:id="@+id/switch_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

        </LinearLayout>

        <LinearLayout style="@style/InkCard">

            <TextView
                style="@style/InkSection"
                android:text="@string/section_shortcut" />

            <TextView
                style="@style/InkHint"
                android:text="@string/shortcut_hint" />

            <LinearLayout
                android:id="@+id/shortcut_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <Button
                android:id="@+id/add_shortcut"
                style="@style/InkButton"
                android:text="@string/add_shortcut" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
